[gd_scene load_steps=14 format=3 uid="uid://balnt55l3mhd0"]

[ext_resource type="Script" uid="uid://bu6tuxvp3d13d" path="res://main.gd" id="1_1bvp3"]
[ext_resource type="PackedScene" uid="uid://b0k2r7enywafa" path="res://player.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://l03qhxytsuyb" path="res://Spawn_Collider.tscn" id="3_h2yge"]
[ext_resource type="PackedScene" uid="uid://bvmymh5twd5rw" path="res://canvas_layer.tscn" id="5_lquwl"]
[ext_resource type="PackedScene" uid="uid://bhvajnu1nk0pg" path="res://oxygenTank.tscn" id="6_7mycd"]
[ext_resource type="Texture2D" uid="uid://cjxiu0miylvqi" path="res://graphics/Sprite-0002.png" id="6_kek77"]
[ext_resource type="Texture2D" uid="uid://bnvq311l5ce6a" path="res://graphics/Sprite-0004.png" id="7_5vw27"]
[ext_resource type="PackedScene" uid="uid://cbxpk6gq41hpv" path="res://obstacle.tscn" id="7_272bh"]
[ext_resource type="Script" uid="uid://xenqokb2pxku" path="res://sprite_2d.gd" id="8_5vw27"]

[sub_resource type="GDScript" id="GDScript_7mycd"]
script/source = "extends RigidBody2D


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta: float) -> void:
	pass

func _on_visible_on_screen_notifier_2d_screen_exited() -> void:
	#Deletes self when off screen
	self.queue_free()
"

[sub_resource type="CanvasTexture" id="CanvasTexture_i40ms"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gi63c"]
size = Vector2(1, 1)

[sub_resource type="PackedScene" id="PackedScene_272bh"]
_bundled = {
"conn_count": 1,
"conns": PackedInt32Array(1073741828, 1073741827, 19, 18, 2, 0, 0),
"editable_instances": [],
"names": PackedStringArray("RigidBody2D", "RigidBody2D", "gravity_scale", "freeze", "script", "metadata/_edit_group_", "Sprite2D", "Sprite2D", "scale", "texture", "CollisionShape2D", "CollisionShape2D", "scale", "shape", "VisibleOnScreenNotifier2D", "VisibleOnScreenNotifier2D", "position", "rect", "_on_visible_on_screen_notifier_2d_screen_exited", "screen_exited"),
"node_count": 4,
"node_paths": [NodePath("."), NodePath("."), NodePath("."), NodePath("."), NodePath("VisibleOnScreenNotifier2D")],
"nodes": PackedInt32Array(-1, -1, 1, 0, -1, 4, 2, 0, 3, 1, 4, 2, 5, 3, 0, 1073741824, 0, 7, 6, -1, 2, 8, 4, 9, 5, 0, 1073741825, 0, 11, 10, -1, 2, 12, 6, 13, 7, 0, 1073741826, 0, 15, 14, -1, 2, 16, 8, 17, 9, 0),
"variants": [0.0, true, SubResource("GDScript_7mycd"), true, Vector2(384, 64), SubResource("CanvasTexture_i40ms"), Vector2(384, 64), SubResource("RectangleShape2D_gi63c"), Vector2(182, 22), Rect2(-374, -54, 384, 64)],
"version": 3
}

[node name="Main" type="Node"]
script = ExtResource("1_1bvp3")
floorTile_scene = SubResource("PackedScene_272bh")
obstacle_scene = ExtResource("7_272bh")
oxygenTank_scene = ExtResource("6_7mycd")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(472, 36)
scale = Vector2(2.4560547, 1.4228517)
texture = ExtResource("7_5vw27")
script = ExtResource("8_5vw27")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(470.99997, 194.67894)
scale = Vector2(2.4523873, 2.0518913)
texture = ExtResource("6_kek77")
script = ExtResource("8_5vw27")

[node name="Player" parent="." instance=ExtResource("1_ig7tw")]
position = Vector2(76, 76)

[node name="ScoreTimer" type="Timer" parent="."]
autostart = true

[node name="HUD" parent="." instance=ExtResource("5_lquwl")]

[node name="OxygenTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="ObstacleTimer" type="Timer" parent="."]
autostart = true

[node name="OxygenTankSpawnTimer" type="Timer" parent="."]
wait_time = 11.0
autostart = true

[node name="TileSpawnCollider" parent="." instance=ExtResource("3_h2yge")]
position = Vector2(1120, 107)

[connection signal="timeout" from="ScoreTimer" to="." method="_on_timer_timeout"]
[connection signal="resetScene" from="HUD" to="." method="_on_hud_reset_scene"]
[connection signal="timeout" from="OxygenTimer" to="." method="_on_oxygen_timer_timeout"]
[connection signal="timeout" from="ObstacleTimer" to="." method="_on_obstacle_timer_timeout"]
[connection signal="timeout" from="OxygenTankSpawnTimer" to="." method="_on_oxygen_tank_spawn_timer_timeout"]
